--- a/public/app/css/main/pages/index.css
+++ b/public/app/css/main/pages/index.css
@@ -66,3 +66,7 @@
       color: #fff; }
     .facts-interface__fact-category:active, .facts-interface__fact-category_active {
       opacity: 0.6; }
+
+.api-documentation {
+  margin-top: 7vh;
+  border-top: 2px dashed #a1a1a1; }
