--- a/public/app/sass/main/pages/index.sass
+++ b/public/app/sass/main/pages/index.sass
@@ -50,3 +50,7 @@
 
         &:active, &_active
             opacity: 0.6
+
+.api-documentation
+    margin-top: 7vh
+    border-top: 2px dashed color(muted)
