--- a/public/app/sass/main/main.sass
+++ b/public/app/sass/main/main.sass
@@ -185,7 +185,7 @@ h1, h2, h3, h4, h5, h6,
         font-size: $big_font_size
         color: color(muted)
 
-/* Code sample (inside pre tag) */
+/* Code samples */
 
 .code-sample
     background-color: color(secondary)
