--- a/public/app/sass/main/pages/index.sass
+++ b/public/app/sass/main/pages/index.sass
@@ -6,7 +6,10 @@
 
     &__element
         margin: 0 1vw
-    
+
+    &__number-container
+        flex-direction: column
+
     &__fact-number
         font-size: 26vmin
         font-family: font(alternative)
@@ -51,6 +54,7 @@
         &:active, &_active
             opacity: 0.6
 
+/* API reference */
 .api-documentation
     margin-top: 7vh
     border-top: 2px dashed color(muted)
