--- a/public/app/css/main/main.css
+++ b/public/app/css/main/main.css
@@ -207,7 +207,7 @@ h1, h2, h3, h4, h5, h6,
     font-size: 3.5vmin;
     color: #a1a1a1; }
 
-/* Code sample (inside pre tag) */
+/* Code samples */
 .code-sample {
   background-color: #eaeaea;
   display: table;
