--- a/public/app/css/main/main.css
+++ b/public/app/css/main/main.css
@@ -45,6 +45,12 @@ ul, ol {
   padding: 0;
   margin: 0; }
 
+::-moz-selection {
+  background: rgba(255, 0, 0, 0.6); }
+
+::selection {
+  background: rgba(255, 0, 0, 0.6); }
+
 /* Styling of often-used core elements */
 /* Page body */
 .page-body {
